# diffscope-project

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  crowdin.yml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.icns  config.json.in  info.plist.in  main.cpp
src/app/icons/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/application/: CMakeLists.txt
src/libs/application/dspxmodel/: CMakeLists.txt
src/libs/application/loadapi/: CMakeLists.txt  initroutine.cpp  initroutine.h
src/libs/application/transactional/: CMakeLists.txt  Transaction.cpp  Transaction.h  TransactionController.cpp  TransactionController.h  TransactionController_p.h  Transaction_p.h  TransactionalStrategy.cpp  TransactionalStrategy.h
src/libs/application/uishell/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/achievement/: CMakeLists.txt  achievementglobal.h  plugin.json.in  plugin.json.in.tmp
src/plugins/achievement/internal/: AchievementPlugin.cpp  achievementplugin.cpp  achievementplugin.h
src/plugins/achievement/res/: org.diffscope.achievement_actions.xml
src/plugins/audio/: CMakeLists.txt  audioglobal.h  plugin.json.in
src/plugins/audio/audio/: PreviewSoundPlayer.cpp  PreviewSoundPlayer.h  PreviewSoundPlayer_p.h
src/plugins/audio/audiocontext/: AudioClipAudioContext.cpp  AudioClipAudioContext.h  AudioClipAudioContext_p.h  GlobalAudioContext.cpp  GlobalAudioContext.h  GlobalAudioContext_p.h  ProjectAudioContext.cpp  ProjectAudioContext.h  ProjectAudioContext_p.h  TrackAudioContext.cpp  TrackAudioContext.h  TrackAudioContext_p.h
src/plugins/audio/audioexport/: AudioExporter.cpp  AudioExporter.h  AudioExporterConfig.cpp  AudioExporterConfig.h  AudioExporterConfig_p.h  AudioExporter_p.h
src/plugins/audio/internal/: AudioExporterPresets.cpp  AudioExporterPresets.h  AudioPlugin.cpp  AudioPlugin.h  AudioPreference.cpp  AudioPreference.h  AudioSystem.cpp  AudioSystem.h  audioplugin.cpp  audioplugin.h  audiosystem.cpp
src/plugins/audio/res/: org.diffscope.audio_actions.xml
src/plugins/audiovisualizer/: CMakeLists.txt  plugin.json.in
src/plugins/audiovisualizer/internal/: AudioThumbnailWaveformThumbnail.cpp  AudioThumbnailWaveformThumbnail.h  AudioVisualizerPlugin.cpp  AudioVisualizerPlugin.h
src/plugins/audiovisualizer/qml/: AudioThumbnail.qml
src/plugins/audiovisualizer/res/: org.diffscope.audiovisualizer_actions.xml
src/plugins/coreplugin/: CMakeLists.txt  coreglobal.h  plugin.json.in
src/plugins/coreplugin/core/: CoreInterface.cpp  CoreInterface.h  DefaultLyricManager.cpp  DefaultLyricManager.h  DefaultLyricManager_p.h  NotificationMessage.cpp  NotificationMessage.h  NotificationMessage_p.h  PropertyEditorManager.cpp  PropertyEditorManager.h  PropertyEditorManager_p.h  QuickInput.cpp  QuickInput_p.h  QuickPick.cpp  QuickPick.h  QuickPick_p.h  TrackColorSchema.cpp  TrackColorSchema.h  TrackColorSchema_p.h  behaviorpreference.cpp  behaviorpreference.h  coreinterface.cpp  coreinterface.h  icore.cpp  icore.h  notificationmessage.cpp  notificationmessage.h  notificationmessage_p.h  projectdocumentcontext.cpp  projectdocumentcontext.h  projectdocumentcontext_p.h  quickinput.cpp  quickinput.h  quickinput_p.h  quickpick.cpp  quickpick.h  quickpick_p.h
src/plugins/coreplugin/internal/: BehaviorPreference.cpp  BehaviorPreference.h  CorePlugin.cpp  CorePlugin.h  KeySignatureAtSpecifiedPositionHelper.cpp  KeySignatureAtSpecifiedPositionHelper.h  PhonemeListModel.cpp  PhonemeListModel.h  PlatformJumpListHelper.cpp  PlatformJumpListHelper.h  VirtualSingerPropertyEditorHelper.cpp  VirtualSingerPropertyEditorHelper.h  behaviorpreference.cpp  behaviorpreference.h  coreplugin.cpp  coreplugin.h  jsonutils.h
src/plugins/coreplugin/project/: DspxCheckerRegistry.cpp  DspxCheckerRegistry.h  DspxDocument.cpp  DspxDocument.h  DspxDocument_p.h  DspxInspectorDialog.cpp  DspxInspectorDialog.h  DspxInspectorDialog_p.h  DspxVisualizationModel.cpp  DspxVisualizationModel_p.h  EditActionsHandler.cpp  EditActionsHandler.h  EditActionsHandlerRegistry.cpp  EditActionsHandlerRegistry.h  EditActionsHandlerRegistry_p.h  EditLoopScenario.cpp  EditTempoTimeSignatureScenario.cpp  EditTempoTimeSignatureScenario.h  EditTempoTimeSignatureScenario_p.h  IDspxChecker.cpp  IDspxChecker.h  InsertItemScenario.cpp  InsertItemScenario_p.h  OpenSaveProjectFileScenario.cpp  OpenSaveProjectFileScenario.h  ProjectDocumentContext.cpp  ProjectDocumentContext.h  ProjectDocumentContext_p.h  ProjectTimeline.cpp  ProjectTimeline.h  ProjectTimeline_p.h  ProjectViewModelContext.cpp  ProjectViewModelContext.h  ProjectViewModelContext_p.h  editactionshandler.cpp  editactionshandler.h  editactionshandlerregistry.cpp  editactionshandlerregistry.h  editactionshandlerregistry_p.h  projectdocumentcontext.cpp  (+6 more)
src/plugins/coreplugin/qml/: Actions.qml  HomeWindow.qml  MusicTimelineHelper.qml
src/plugins/coreplugin/res/: Core_actions.xml  achievement_actions.xml  core_actions.xml  core_macos_actions.xml  org.diffscope.core_actions.xml
src/plugins/coreplugin/singer/: ArchitectureInfo.cpp  ArchitectureInfo.h  ArchitectureInfoProvider.cpp  ArchitectureInfoProvider.h  ArchitectureInfoProvider_p.h  ArchitectureInfo_p.h  ClipSingerIdProvider.cpp  ClipSingerIdProvider.h  ClipSingerIdProvider_p.h  ParameterInfoProvider.cpp  ParameterInfoProvider.h  ParameterInfoProvider_p.h  SingerInfo.cpp  SingerInfo.h  SingerInfoProvider.cpp  SingerInfoProvider.h  SingerInfoProvider_p.h  SingerInfo_p.h  SingerRegistry.cpp  SingerRegistry.h  (+4 more)
src/plugins/directmanipulation/: CMakeLists.txt  plugin.json.in
src/plugins/importexportmanager/: CMakeLists.txt  importexportmanagerglobal.h  plugin.json.in
src/plugins/libresvipformatconverter/: CMakeLists.txt  plugin.json.in
src/plugins/maintenance/: CMakeLists.txt  plugin.json.in
src/plugins/midiformatconverter/: CMakeLists.txt  plugin.json.in
src/plugins/packagemanager/: CMakeLists.txt  plugin.json.in
src/plugins/visualeditor/: CMakeLists.txt  plugin.json.in  visualeditorglobal.h
src/plugins/welcomewizard/: CMakeLists.txt  plugin.json.in
src/share/: install.cmake
(+948 files in other folders)
